demoDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-demo-app
  namespace: myapp
  labels:
    app: python-demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-demo-app
  template:
    metadata:
      labels:
        app: python-demo-app
    spec:
      containers:
      - name: python-demo-app
        image: cloudsperk/python-sample-app:v2
        ports:
        - containerPort: 8080
