demoNodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-np-service
spec:
  type: NodePort
  selector:
    app: python-demo-app
  ports:
    - port: 80
      targetPort: 8080
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
