metricMonitorService.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-demo-monitor-service
  namespace: myapp
  labels:
    app: python-demo-app
spec:
  selector:
    app: python-demo-app
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
